--- a/package.json
+++ b/package.json
@@ -5,14 +5,13 @@
   "homepage": "https://lg-soria.github.io/portafolio/",
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
+    "@material-tailwind/react": "^1.4.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "autoprefixer": "^10.4.14",
     "flowbite": "^1.6.5",
     "flowbite-react": "^0.4.4",
     "gh-pages": "^5.0.0",
-    "postcss": "^8.4.23",
     "pure-react-carousel": "^1.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -47,6 +46,8 @@
     ]
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.23",
     "tailwindcss": "^3.3.2"
   }
 }
