--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "homepage": "https://lg-soria.github.io/portafolio/",
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
+    "@headlessui/react": "^1.7.14",
+    "@heroicons/react": "^2.0.17",
     "@material-tailwind/react": "^1.4.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
