--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "flowbite": "^1.6.5",
     "flowbite-react": "^0.4.4",
     "gh-pages": "^5.0.0",
+    "i18next": "^22.4.15",
+    "i18next-browser-languagedetector": "^7.0.1",
     "pure-react-carousel": "^1.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^12.2.2",
     "react-router-dom": "^6.11.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
