--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portafolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://www.lg-soria.com.ar",
+  "homepage": "https://lg-soria.github.io/portafolio/",
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
     "@emotion/react": "^11.11.0",
